This should fix the build failure for the docs